--- a/README
+++ b/README
@@ -36,7 +36,7 @@ clearly marked, so as not to confuse it with the version available from LANL.
 
 This software is licensed under the Apache License, Version 2.0 (the
 "License"); you may not use it except in compliance with the License. A copy
-of the License is available in the file LICENSE-2.0 or at
+of the License is available in the file LICENSE or at
 <http://www.apache.org/licenses/LICENSE-2.0>.
 
 Unless required by applicable law or agreed to in writing, software
