docs for commit bc316b8

--- a/_sources/install.txt
+++ b/_sources/install.txt
@@ -18,6 +18,15 @@ Summary
      cd quac
      make
 
+#. Prepare the test dataset. (Optional; see ``twtests/README`` for details on
+   how to get the data.)
+
+   ::
+
+     cd twtests/tweets
+     ./get-test-data /path/to/preprocessed/tweets
+     cd -
+
 #. Run the tests (this is actually pretty important, as it tells you whether
    you've installed all the dependencies correctly)::
 
@@ -26,6 +35,8 @@ Summary
    (While some parts of QUAC will work if some tests fail, we recommend
    installing everything necessary to make them pass, as this will make your
    life much easier going forward.)
+
+   Note that a working Internet connection is required to run the tests.
 
 .. note:: If you plan to :doc:`contribute to QUAC <contributing>`, you
           should fork the repository on Github and clone that fork instead.
