--- a/tests/README
+++ b/tests/README
@@ -1,10 +1,20 @@
-This directory contains the subset of tests which use the "cmdtest" framework.
-These are shell scripts (which might be quite involved); standard output and
-error are tested against expected values. "man cmdtest" for the details.
+These directories contain tests which use the "cmdtest" framework. These are
+shell scripts (which might be quite involved); standard output and error are
+tested against expected values. "man cmdtest" for the details.
 
-Test scripts can assume that pwd is this directory.
+What's here:
 
-../test.sh runs all tests here. To run just one, say "cmdtest -t foo ."
+  standalone ... tests that require no extra data
+  twitter ...... need a small Twitter dataset
+
+Tests that require external data which are not present are skipped. These test
+directories contain READMEs with more detail on which data are needed and how
+to get them.
+
+A test script can assume that cwd is the directory containing it.
+
+../test.sh runs all tests here. To run just one, cd to the appropriate
+subdirectory and say "cmdtest -t foo ."
 
 You might be inclined to use "set -x" in your script to intermingle echoed
 commands and output. The problem here is that it's not consistent which
