provide complete citations; update PLOS paper link

--- a/experiments/README
+++ b/experiments/README
@@ -20,12 +20,12 @@ The experiments are organized by year, publication venue, and a short moniker.
 More specifically, what is here:
 
   2014_CSCW_Tweetlocating
-    Priedhorsky, Culotta, and Del Valle, 2014
+    R. Priedhorsky, A. Culotta, and S. Y. Del Valle, "Inferring the Origin Locations of Tweets with Quantitative Confidence," in Proceedings of the 17th ACM Conference on Computer Supported Cooperative Work & Social Computing, 2014, pp. 1523–1536.
     http://dx.doi.org/10.1145/2531602.2531607
 
   2014_PLOS-Comp-Bio_Wikidemics_feasibility
-    Generous, Fairchild, Deshpande, Del Valle, and Priedhorsky, 2014
-    (in submission)
+    N. Generous, G. Fairchild, A. Deshpande, S. Y. Del Valle, and R. Priedhorsky, "Global Disease Monitoring and Forecasting with Wikipedia," PLOS Computational Biology, vol. 10, no. 11, p. e1003892, Nov. 2014.
+    http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003892
     http://arxiv.org/abs/1405.3612
 
 Typically, experimental code is not included until after some publication
