--- a/experiments/README
+++ b/experiments/README
@@ -23,10 +23,13 @@ More specifically, what is here:
     Priedhorsky, Culotta, and Del Valle, 2014
     http://dx.doi.org/10.1145/2531602.2531607
 
-  2014_PLOS-Comp-Bio_Wikidemics_feasibility
-    Generous, Fairchild, Deshpande, Del Valle, and Priedhorsky, 2014
-    (in submission)
-    http://arxiv.org/abs/1405.3612
+  2014_PLOS-Comp-Bio_Wikidemics-feasibility
+    Generous et al., 2014
+    http://dx.doi.org/10.1371/journal.pcbi.1003892
+
+  2016_CSCW_Measuring-global-disease
+    Priedhorsky et al., 2016
+    http://dx.doi.org/10.1145/2998181.2998183
 
 Typically, experimental code is not included until after some publication
 milestone, which could be anything from paper submission to final publication.
