add PLOS 2019 source code

--- a/experiments/README
+++ b/experiments/README
@@ -31,6 +31,10 @@ More specifically, what is here:
     Priedhorsky et al., 2017
     http://dx.doi.org/10.1145/2998181.2998183
 
+  2019_PLOS-Comp-Bio_Deceptiveness
+    Priedhorsky et al., 2019
+    (DOI pending)
+
 Typically, experimental code is not included until after some publication
 milestone, which could be anything from paper submission to final publication.
 
